<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoactividad2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TvGrados"
        android:layout_width="188dp"
        android:layout_height="105dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="166dp"
        android:text="@string/texto_grados"
        android:textAlignment="center"
        android:textColor="@color/color_grados"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@+id/TvCiudad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TvCiudad"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="72dp"
        android:text="@string/texto_ciudad"
        android:textAlignment="center"
        android:textColor="@color/color_ciudad"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/TvEstatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TvEstatus"
        android:layout_width="129dp"
        android:layout_height="43dp"
        android:layout_marginBottom="188dp"
        android:text="@string/texto_estatus"
        android:textAlignment="center"
        android:textColor="@color/color_estatus"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>